<resources>
    <string name="app_name">PicStar Celebrity</string>
    <string name="get_started">Get Started</string>
    <string name="publiciity_made_easy">Publicity made easy</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="email_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="com_auth0_client_id">K4aQGIftoSvf1OZVasx9emMjkFF5DCwa</string>
    <string name="com_auth0_domain">dev-fwhugmus.us.auth0.com</string>
    <string name="ok">OK</string>
    <string name="hello_txt">Hello</string>
    <string name="retake_txt">Retake</string>
    <string name="continue_txt">Continue</string>
    <string name="cancel_txt">Cancel</string>
    <string name="spanish_txt">Spanish</string>
    <string name="select_language_txt">Select a Language</string>
    <string name="noInternet_txt">You are not connected to the Internet.</string>
    <string name="personalise_feature_txt">Personalise your \n features</string>
    <string name="liveselfie_txt">Live Selfie</string>
    <string name="photoSelfie_txt">Photo Selfie</string>
    <string name="videomsg_txt">Video Message</string>
    <string name="live_video_txt">Live Video</string>
    <string name="start_live_video_txt">Live video</string>
    <string name="price_txt">Price: $ </string>
    <string name="choosethis_feature_txt"> Choose this feature</string>
    <string name="start_txt">  Start </string>
    <string name="somethingwnt_wrong_txt">Something went wrong</string>
    <string name="enter_servicecost_msg">Please enter service price</string>
    <string name="profile_txt">Profile</string>
    <string name="update_profile_txt">Update Profile</string>
    <string name="create_event">Create Event</string>
    <string name="forgotpwd_txt">Forgot password?</string>
    <string name="enter_valid_price">Please enter valid price </string>
    <string name="enteremail_pwd_msgalert">Please enter email address and password</string>
    <string name="enter_email_txt">  Please enter email address </string>
    <string name="privacypolicy_txt">Terms &amp; Privacy Policy </string>
    <string name="privacy_policy">Privacy policy </string>
    <string name="contactus_txt">Contact us</string>
    <string name="block_txt">Block</string>
    <string name="blocked_txt">Blocked</string>
    <string name="block_thisuser_txt">Block this user</string>
    <string name="comments_txt">Comments</string>
    <string name="enter_urcomments_alertmsg">Please enter your comments on this user</string>
    <string name="photos_nd_videos_txt">  Photos &amp; Videos</string>
    <string name="photos_txt"> Photos</string>
    <string name="videos_txt"> Videos</string>
    <string name="enter_username_txt">Please enter your name</string>
    <string name="select_gender_txt">Please select gender</string>
    <string name="galleryandcamera_runtimepermission_alert_txt">Gallery,Camera and Record audio access is required to make full use of this app </string>
    <string name="phone_call_permiision_alert">Phone call access is required to make full use of this app </string>
    <string name="gallery_txt">Gallery</string>
    <string name="camera_txt">Camera</string>
    <string name="record_video_txt">Record video</string>
    <string name="chooseoption_txt">Choose an option</string>
    <string name="cam_Permision_deny_txt">Camera access is required to make full use of this app </string>
    <string name="male_txt">  Male</string>
    <string name="female_txt">Female</string>
    <string name="other_txt">Other</string>
    <string name="gender_txt">Gender</string>
    <string name="planes_txt">PLANS</string>
    <string name="update_yourprice_txt">UPDATE YOUR PRICE</string>
    <string name="enter_email_alert">Please enter email address</string>
    <string name="enter_validemail_msg">Please enter valid email address.</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="dashboard_txt">Dashboard</string>
    <string name="events_txt">Events</string>
    <string name="save_settings_txt">Save Settings</string>
    <string name="uploadvideo_txt">Upload video</string>
    <string name="venue_txt">Venue</string>
    <string name="date_txt">Date</string>
    <string name="description_txt">Description</string>
    <string name="event_name_txt">Event Name</string>
    <string name="enter_eventname_txt">Please enter event name</string>
    <string name="enter_venue">Please enter venue</string>
    <string name="enter_eventdate_txt">Please enter event date</string>
    <string name="enter_descritption">Please enter description</string>
    <string name="enter_pwd_alert_txt">Please enter password</string>
    <string name="select_atleast_oneservice">Please select atleast one service</string>
    <string name="enter_photoselfie_price">Please enter price of Photo selfie</string>
    <string name="enter_liveselfie_price">Please enter price of Live selfie</string>
    <string name="enter_videomsg_price">Please enter price of Video message</string>
    <string name="enter_livevideo_price">Please enter price of Live video</string>
    <string name="price_should_be_greaterthan_zero">Price should be greater than zero</string>
    <string name="stockimages_txt">Stock Images</string>
    <string name="cant_upload_selectedVideo">Can"'"t able to upload.Selected video size is so large</string>
    <string name="upcoming">Upcoming</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="album_txt">Album</string>
    <string name="language_txt">Language</string>
    <string name="stock_images">Stock Images</string>
    <string name="history_txt">History</string>
    <string name="settings_txt">Settings</string>
    <string name="upload_stock_images">Upload Stock Images</string>
    <string name="storage_permission_not_granted">Please give the storage permission.</string>
    <string name="gallery_runtimepermission_alert_txt">Gallery access is required to make full use of this app </string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="external_camera">External camera</string>
    <string name="ultrawide">Ultra-wide</string>
    <string name="no_burst">no burst</string>
    <string name="preference_nr_mode_low_light_message">Low light mode: please hold the camera steady</string>
    <string name="left_of_screen">at left of screen</string>
    <string name="right_of_screen">at right of screen</string>
    <string name="top_of_screen">at top of screen</string>
    <string name="bottom_of_screen">at bottom of screen</string>
    <string name="centre_of_screen">at centre</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="face_detected">face</string>
    <string name="faces_detected">faces</string>
    <string name="focus_distance">Focus distance</string>
    <string name="focus_bracketing_source_distance">Focus bracketing source distance</string>
    <string name="focus_bracketing_target_distance">Focus bracketing target distance</string>
    <string name="infinite">Infinite</string>
    <string name="metres_abbreviation">m</string>
    <string name="white_balance">White balance</string>
    <string name="cancelled_repeat_mode">Cancelled repeat mode</string>
    <string name="cancelled_focus_bracketing">Cancelled focus bracketing</string>
    <string name="error_features_4k">4K UHD</string>
    <string name="error_features_bitrate">Bitrate</string>
    <string name="error_features_frame_rate">Frame rate</string>
    <string name="error_features_slow_motion">Slow motion</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="iso">ISO</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_auto">Flash Auto</string>
    <string name="flash_on">Flash On</string>
    <string name="flash_torch">Torch</string>
    <string name="flash_red_eye">Red Eye</string>
    <string name="flash_frontscreen_auto">Screen Flash Auto</string>
    <string name="flash_frontscreen_on">Screen Flash On</string>
    <string name="flash_frontscreen_torch">Screen Torch</string>
    <string name="seconds_abbreviation">s</string>
    <string name="fps">FPS</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="video_pause">Video paused</string>
    <string name="video_resume">Video resumed</string>
    <string name="pause_video">Pause video recording</string>
    <string name="resume_video">Resume video recording</string>
    <string name="permission_record_audio_not_available">Microphone permission is not available</string>
    <string name="video_no_free_space">Not enough free space to record video</string>
    <string name="permission_location_not_available">Location permission is not available</string>
    <string name="video_power_critical">Video stopped\nBattery level critically low</string>
    <string name="permission_rationale_title">Permission required</string>
    <string name="permission_rationale_camera">Camera permission is required to enable the camera</string>
    <string name="permission_rationale_storage">Storage read/write permission is required to save resultant files such as photos or videos</string>
    <string name="permission_rationale_record_audio">Microphone permission is required to record video with audio, as well as use the \"Audio control\" options</string>
    <string name="permission_rationale_location">Location permission is required for geotagging (storing location data in
        photos and videos). Location permission is also required for connecting to Bluetooth LE remote control devices.</string>
    <string name="restore_settings_failed">Failed to restore settings</string>
    <string name="saved_settings">Saved settings</string>
    <string name="save_settings_failed">Failed to save settings</string>
    <string name="photo_mode_panorama_full">Panorama</string>
    <string name="photo_mode_hdr">HDR</string>
    <string name="hdr_info">HDR mode is useful for shots with a large variation in brightness. It works by taking multiple shots at different exposures, and combining them to create the final image.\n\nNote that HDR is not suitable for scenes with fast movement, and may result in less accurate color reproduction.\n\nTaking photos in HDR mode will be slower.</string>
    <string name="panorama_info">To take a panorama image, hold your device in portrait orientation, and click to take a photo to start the panorama. Then rotate your device either left or right to move the centred white circle over the blue dot. After each new image is captured, keep rotating your device to cover each new blue dot that appears in turn.\n\nClick the tick icon to save the panorama, or the cross icon to cancel.\n\nNote that panorama photos can take time to process and save.</string>
    <string name="photo_mode_noise_reduction_full">Noise Reduction</string>
    <string name="photo_mode_dro">DRO</string>
    <string name="photo_mode_standard_full">Standard</string>
    <string name="photo_mode_fast_burst_full">Fast Burst</string>
    <string name="photo_mode_expo_bracketing_full">Exposure Bracketing</string>
    <string name="photo_mode_focus_bracketing_full">Focus Bracketing</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="preference_nr_mode">NR Mode</string>
    <string name="preference_nr_mode_normal">Normal</string>
    <string name="preference_fast_burst_n_images">Number of photos</string>
    <string name="preference_fast_burst_n_images_entries_2">2</string>
    <string name="preference_fast_burst_n_images_entries_3">3</string>
    <string name="preference_fast_burst_n_images_entries_4">4</string>
</resources>