<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <!-- binding object of ViewModel to the XML layout -->
    <data>

        <variable
            name="viewModel"
            type="com.devrabbit.picstarcelebrity.mvvm.viewmodel.LoginViewModel" />
    </data>

    <!-- Provided Linear layout for the activity components -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_screen_bg"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                style="@style/BiggestTextStyle"
                android:layout_marginBottom="10dp"
                android:text="@string/welcome" />

            <EditText
                android:id="@+id/lksdvm"
                style="@style/EditTextStyle"
                android:layout_marginTop="40dp"
                android:background="@null"
                android:hint="@string/email_hint"
                android:paddingBottom="12dp"
                android:text="@={viewModel.userEmail}"
                android:textColorHint="@color/ethint_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/passwordET"
                    style="@style/EditTextStyle"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:text="@={viewModel.userPassword}"
                    android:textColorHint="@color/ethint_color" />

                <ImageView
                    android:id="@+id/paswordToggle"
                    style="@style/IconStyle"
                    android:layout_gravity="end|center"
                    android:layout_marginRight="10dp"
                    android:onClick="@{()-> viewModel.onClickPwdHideBtn()}"
                    android:padding="10dp"
                    android:src="@drawable/ic_password_hide" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginBottom="15dp"
                android:background="@color/line_color" />

            <FrameLayout
                android:id="@+id/signinLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                bind:toastMessage="@{viewModel.toastMessag}">

                <TextView
                    style="@style/BiggestTextStyle"
                    android:padding="5dp"
                    android:text="@string/sign_in" />

                <ImageView
                    style="@style/IconStyle"
                    android:layout_gravity="right|center"
                    android:layout_marginRight="10dp"
                    android:onClick="@{()-> viewModel.onButtonClicked()}"
                    android:padding="10dp"
                    android:src="@drawable/ic_right_arrow_black" />

            </FrameLayout>


        </LinearLayout>

        <TextView
            style="@style/BigTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/hind_medium"
            android:onClick="@{()-> viewModel.onClickForgotPwd()}"
            android:text="@string/forgotpwd_txt" />


    </LinearLayout>
</layout>
