<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.devrabbit.picstarcelebrity.mvvm.viewmodel.CelebrityHistoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_screen_bg"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn"
                style="@style/IconStyle"
                android:layout_gravity="left"
                android:layout_marginLeft="3dp"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                style="@style/BiggestTextStyle"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/history_txt" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/recycler_view_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/noHistory_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@={viewModel.message}"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resetakeLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/retakeBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/retake_txt" />

                <Button
                    android:id="@+id/continueBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/continue_txt" />

                <Button
                    android:id="@+id/cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_txt" />

            </LinearLayout>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/loadmorePB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>
</layout>