<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <!-- binding object of ViewModel to the XML layout -->
    <data>

        <variable
            name="viewModel"
            type="com.devrabbit.picstarcelebrity.mvvm.viewmodel.PersonaliseLiveSelfieViewModel" />
    </data>

    <!-- Provided Linear layout for the activity components -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_liveselfie_bg"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="10dp">

        <TextView
            style="@style/BiggestTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/personalise_feature_txt"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_liveselfie" />

        <TextView
            style="@style/BiggestTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/liveselfie_txt"
            android:textColor="@color/white" />

        <!--  <TextView
              style="@style/TextViewStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:maxLines="2"
              android:singleLine="false"
              android:text="Lorem Ipsum is simply dummy text of the printing \n and typesetting industry."
              android:textColor="@color/white" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/BiggestTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/price_txt"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/servicecost_et"
                style="@style/BiggestTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="000"
                android:inputType="number"
                android:maxLength="3"
                android:text="@={viewModel.liveSelfiePrice}"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:onClick="@{()-> viewModel.onCheckboxClicked()}"
                android:src="@drawable/ic_uncheck" />

            <TextView
                style="@style/BigTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/choosethis_feature_txt"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>
